--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.me.becs",
-  "version": "2023.02.08-rc1",
+  "version": "1.0.0",
   "displayName": "ME.BECS",
   "description": "ME.BECS Core Package.",
   "unity": "2023.1",
